# cppcsp2

./: AUTHORS  COPYING  ChangeLog  Makefile.am  README  configure.ac  cppcsp.dox  cppcsp2-2.0.pc.in  cppcsp_config.h.in  cppcsp_internal.dox
publish/: channel-algs.tex  cppcsp-paper-2007.tex
src/: alt.cpp  alt.h  atomic.cpp  atomic.h  atomic_impl.h  barrier.h  bucket.h  buffered_channel.h  channel.h  channel_base.h  channel_buffers.h  channel_ends.h  channel_factory.h  cppcsp.cpp  cppcsp.h  cppcsp_config.h.in  csprocess.h  kernel.cpp  kernel.h  mobile.h  mutex.h  net_channels.h  process.cpp  process.h  run.h  thread_local.h  time.h
src/common/: barrier_bucket.h  basic.h
test/: alt_channel_test.cpp  alt_test.cpp  barrier_test.cpp  buffered_channel_test.cpp  channel_test.cpp  mutex_test.cpp  net_channel_test.cpp  run_test.cpp  test.cpp  test.h  test_normal.cpp  test_perf.cpp  time_test.cpp
